--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,9 +9,11 @@ html lang="en"
         header
             h1 Flutt
 
-        nav 
+        nav            
             a class="nav-items" href="/" Home
-            a class="nav-items" href="/about" About 
+            a class="nav-items" href="/about" About
+            a class="nav-items" href="/veryLastFlutt" Very Last Flutt 
+            p Write url /fruits/[isert best flutt here] or /lastFlutt/[insert type of flutt]/[number of flutt] for last pages
 
     section
         ==yield
