--- a/views/fruits/index.slim
+++ b/views/fruits/index.slim
@@ -3,6 +3,7 @@ form action="/fruits" method="get"
     input type="text" placeholder="Sök på frukt!" name="q"
     label Visa alla frukter
     input type="checkbox" name="viewAll"
+    input type="submit" value="Sök"
 
 h3 Vill du lägga till en frukt?
 form action="/fruits/add" method="post"
