--- a/views/layout.slim
+++ b/views/layout.slim
@@ -12,8 +12,7 @@ html lang="en"
         nav            
             a class="nav-items" href="/" Home
             a class="nav-items" href="/about" About
-            a class="nav-items" href="/veryLastFlutt" Very Last Flutt 
-            p Write url /fruits/[isert best flutt here] or /lastFlutt/[insert type of flutt]/[number of flutt] for last pages
+            a class="nav-items" href="/fruits" Fruits
 
     section
         ==yield
